Update output description in M1.md

--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -1,1 +1,3 @@
-#paste output ss of problem1.java code
+# output of problem1.java
+
+<img width="584" height="853" alt="image" src="https://github.com/user-attachments/assets/7d22158c-ef52-4c86-a17d-bd733d5c0a14" />
