Add output images for problem1 and problem2

--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -1,3 +1,10 @@
 # output of problem1.java
 
 <img width="584" height="853" alt="image" src="https://github.com/user-attachments/assets/7d22158c-ef52-4c86-a17d-bd733d5c0a14" />
+
+
+
+# output of problem2.java
+
+
+<img width="872" height="633" alt="image" src="https://github.com/user-attachments/assets/83ad6920-d28b-4625-a1f2-4d20e21f0b64" />
