Add output section for problem3.java

--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -8,3 +8,10 @@
 
 
 <img width="872" height="633" alt="image" src="https://github.com/user-attachments/assets/83ad6920-d28b-4625-a1f2-4d20e21f0b64" />
+
+
+
+# output of problem3.java 
+
+
+<img width="669" height="574" alt="image" src="https://github.com/user-attachments/assets/3ad471cc-9cc9-4c59-8c05-578558f24f8e" />
