Add output image for problem4.java

--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -18,4 +18,8 @@
 <img width="537" height="896" alt="image" src="https://github.com/user-attachments/assets/b9eae79a-32ce-49ac-9ffc-81d2359d3431" />
 
 
+# output of problem4.java
+
+
+<img width="532" height="375" alt="image" src="https://github.com/user-attachments/assets/91e533e1-5b01-4ce8-80ae-f2e1c25da189" />
 
