--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -23,3 +23,9 @@
 
 <img width="532" height="375" alt="image" src="https://github.com/user-attachments/assets/91e533e1-5b01-4ce8-80ae-f2e1c25da189" />
 
+
+
+
+# output of problem5.java
+
+<img width="529" height="626" alt="image" src="https://github.com/user-attachments/assets/92cf7483-ba09-4623-a682-8d5d1a51e8d3" />
