--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -32,9 +32,20 @@
 
 
 
-
 # output of Problem6.java
 
 
 <img width="731" height="772" alt="image" src="https://github.com/user-attachments/assets/9c54e839-1a08-440c-b210-4866f17ac3c1" />
+
+
+
+# output of Problem7.java
+
+<img width="828" height="691" alt="image" src="https://github.com/user-attachments/assets/1df18847-d6ea-40ef-8531-558cdf1fe861" />
+
+
+
 ![Uploading image.png…]()
+
+
+
